--- a/_text-effects.scss
+++ b/_text-effects.scss
@@ -5,7 +5,7 @@
   margin: 1rem;
   transition: all 0.3s;
   font-family: $font;
-  background-image: url(media/poggers.jpg);
+  background-image: url();
   background-position: center;
   color: transparent;
   background-clip: text;
@@ -13,7 +13,7 @@
 }
 
 .text-effect:hover {
-  background-image: url(media/poggers.jpg);
+  background-image: url();
   background-position: center;
   color: color(red);
   transform: scaleY(3) scaleX(3);
