--- a/style.css
+++ b/style.css
@@ -34,14 +34,13 @@ body {
   background-color: blue;
   color: black;
   background-color: #0f0062;
-  color: white;
+  color: #ffa600;
 }
 
 .btn-blue::after {
   background-color: blue;
   color: black;
   background-color: #0f0062;
-  color: white;
 }
 
 html,
@@ -59,7 +58,7 @@ body {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   font-family: "Anton", sans-serif;
-  background-image: url(media/poggers.jpg);
+  background-image: url();
   background-position: center;
   color: transparent;
   background-clip: text;
@@ -67,7 +66,7 @@ body {
 }
 
 .text-effect:hover {
-  background-image: url(media/poggers.jpg);
+  background-image: url();
   background-position: center;
   color: #941414;
   -webkit-transform: scaleY(3) scaleX(3);
