--- a/_variables.scss
+++ b/_variables.scss
@@ -11,6 +11,7 @@ $colors: (
   red: rgb(148, 20, 20),
   orange: rgb(255, 166, 0),
   yellow: rgb(255, 238, 0),
+  black: black,
 );
 
 $font: "Anton", sans-serif;
