--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,10 @@
 @import "_variables.scss";
 @import "_btn.scss";
 @import "_text-effects.scss";
-
+@import "_oranges.scss";
+@import "_text-effects.scss";
+@import "_orange-gallery.scss";
+@import "_orange.scss";
 .container {
   width: 80vw;
   margin: 2rem auto;
