--- a/_btn.scss
+++ b/_btn.scss
@@ -5,26 +5,48 @@
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
-  background-color: blue;
-  background-color: color(blue);
+  background-color: color(orange);
   margin: 1rem auto;
   font-size: 2rem;
   border-radius: 10rem;
+  transition: all 0.3s;
   position: relative;
 }
- 
+
 .btn-orange {
-  background-color: blue;
+  background-color: color(orange);
   color: black;
   background-color: color(blue);
-  color: white;
+  color: color(orange);
 }
- 
-.btn-blue::after {
-  background-color: blue;
+.btn-orange::after {
+  background-color: color(orange);
   color: black;
-  background-color: color(blue);
-  color: white;
 }
- 
 .btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 0.5rem rgba(color(black), 10);
+}
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.3s;
+}
+.btn:hover::after {
+  transform: scaleX(1.5) scaleY(1.6);
+  opacity: 0;
+}
+.btn:active {
+  transform: translateY(-1px);
+  transform: scaleX(1.5) scaleY(1.6);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+ 
